fixed email icon alignment in contacts page

--- a/wp-content/themes/French Fries 2/style.css
+++ b/wp-content/themes/French Fries 2/style.css
@@ -462,6 +462,10 @@ body {
   border: 1px solid red;
 }
 
+.ch-img-1{
+  padding-top: 50px;
+}
+
 .contact-logo{
   color: white; 
   font-size: 8em; 
